<!--
  ~ Copyright (C) 2016 Source Allies, Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <string name="app_name">Zone Beacon</string>
    <string name="app_intro_title">Welcome to\nZone Beacon!</string>
    <string name="powered_by_sai">Powered by Source Allies, Inc.</string>
    <string name="initial_gateway_setup">Add a Gateway</string>
    <string name="initial_gateway_help">Enter your gateway information.\n\nNot sure what this is? Check this YouTube channel for more info on setting up your system.\n\nOr…</string>
    <string name="transfer_from_another_device">Transfer Settings from Another Device</string>
    <string name="name">Name this gateway</string>
    <string name="ip_address">IP address</string>
    <string name="port">Port</string>
    <string name="fill_field">Cannot be empty!</string>
    <string name="add_zone">Add Zone to %s</string>
    <string name="add_button">Add Button to %s</string>
    <string name="add_command">Add Command to %s</string>
    <string name="settings">Settings</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="get_help">Get Help</string>
    <string name="transfer_settings">Transfer Settings</string>
    <string name="create_gateway">Create New Gateway</string>
    <string name="zones">Zones</string>
    <string name="zones_info">Zones allow you to group together buttons and execute them together. These can be used to control several areas of the system at once.\n\nEx: Living Room, Basement Area, Patio</string>
    <string name="buttons">Buttons</string>
    <string name="buttons_info">Buttons allow you to group together commands and execute all of them at the same time. Several commands (lights) can be attached to a single button.\n\nEx: Bar Counter, Hidden Table, Driveway Light</string>
    <string name="light_dimmer">Light Dimmer</string>
    <string name="full_percent">100%</string>
    <string name="full_brightness">Full Brightness</string>
    <string name="no_brightness">No Brightness</string>
    <string name="add_button_title">Add a Button</string>
    <string name="button_name_hint">Button Name</string>
    <string name="include_commands_title">Include Commands:</string>
    <string name="add_zone_title">Add a Zone</string>
    <string name="zone_name_hint">Zone Name</string>
    <string name="include_buttons_title">Include Buttons:</string>
    <string name="add_command_title">Add a Command</string>
    <string name="command_name">Command Name</string>
    <string name="load_number">Load Number</string>
    <string name="controller_number">Controller Number</string>
    <string name="app_helper">Zone Beacon Help</string>
    <string name="gateways">Gateways</string>
    <string name="gateways_info">Name, IP address, and port number describe and provide access to your lighting system.\n\nFor help setting up your system, check this YouTube channel.</string>
    <string name="commands">Commands</string>
    <string name="commands_info">Commands store information and settings for individual lights.</string>
    <string name="gateway">Gateway</string>
    <string name="edit_gateway_information">Edit Gateway Items</string>
    <string name="initial_nearby_information">Zone Beacon can find other devices nearby who are also using the app and you can easily exchange settings with them so you only have to set up the app once.\n\nTo find nearby devices, we\'ll use a combination of bluetooth, WiFi, and ultrasonic sound.</string>
    <string name="searching_for_friends">Zone Beacon is searching for other devices nearby. Make sure that you have the app opened to this screen on all devices!</string>
    <string name="found_settings">Found settings and saved them!</string>
</resources>
