<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:ignore="Overdraw">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="top"
            android:layout_weight="3"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:paddingTop="30dp"
            android:textSize="28sp"
            android:text="@string/app_helper"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="top"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:paddingLeft="30dp"
            android:textSize="24sp"
            android:text="@string/gateways"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="top"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:paddingLeft="30dp"
            android:paddingRight="10dp"
            android:textSize="14sp"
            android:text="@string/gateways_info"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="center"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:textSize="14sp"
            android:text="@string/get_help_additional_info"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="top"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:paddingLeft="30dp"
            android:textSize="24sp"
            android:text="@string/commands"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="top"
            android:layout_weight="3"
            android:paddingLeft="30dp"
            android:paddingRight="10dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:text="@string/commands_info"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="top"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:paddingLeft="30dp"
            android:textSize="24sp"
            android:text="@string/buttons"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="top"
            android:layout_weight="3"
            android:paddingLeft="30dp"
            android:paddingRight="10dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:text="@string/buttons_info"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="top"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:paddingLeft="30dp"
            android:textSize="24sp"
            android:text="@string/zones"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="top"
            android:layout_weight="3"
            android:paddingLeft="30dp"
            android:paddingRight="10dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:text="@string/zones_info"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="15dp" />
    </LinearLayout>
</ScrollView>